# realm-chat

./: .gitignore  README.md  TODO.md  login_email.html  login_email.txt
.github/workflows/: rust.yml
Client/: build.gradle.kts  settings.gradle.kts
Client/godot/: HelloWorld.gdextension
Client/realmchat_client/src/: lib.rs
auth/: .env  Cargo.toml  example.env  login_email.html
auth/migrations/: 20240725215330_create_everything.sql
auth/src/: main.rs  server.rs  types.rs
client/: Cargo.toml
client/assets/: manifest.json
client/godot/: icon.svg.import  main.gd  main.tscn  project.godot
client/realmchat_client/: Cargo.toml
client/src/: app.rs  lib.rs  main.rs  types.rs
client/src/ui/: gui.rs  panels.rs
gradle/wrapper/: gradle-wrapper.properties
server/: .env  Cargo.toml  example.env  surrealdb.sh
server/migrations/: 20240727041731_create_everything.sql
server/src/: events.rs  lib.rs  main.rs  server.rs  types.rs
shared/: Cargo.toml
shared/src/: lib.rs  types.rs
