[package]
name = "realm_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
futures = "0.3.30"
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.40.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "chrono" ] }
sha3 = "0.10.8"
hex = "0.4.3"
rand = "0.8.5"
mail-send = "0.4.9"
regex = "1.10.5"
realm_shared = { path = "../shared" }
