[package]
name = "realm_client"
version = "0.1.0"
edition = "2021"

[dependencies]
realm_auth = { path = "../auth" }
realm_server = { path = "../server" }
realm_shared = { path = "../shared" }
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
env_logger = "0.11.5"