[package]
name = "realm_client"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-args=-mwindows "]

[package.metadata.bundle]
name = "Realm Chat"
identifier = "com.abunchofknowitalls.realm"
icon = ["32x32.png", "128x128.png"]

[dependencies]
realm_auth = { path = "../auth" }
realm_server = { path = "../server" }
realm_shared = { path = "../shared" }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
tokio = "1.40.0"
tarpc = { version = "0.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
regex = "1.10.6"
native-dialog = "0.7.0"
chrono = "0.4.38"